service-golang.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-golang
  namespace: dev
spec:
  selector:
    resource: pod-golang
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
