ingress-golang.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-golang
  namespace: dev
spec:
  rules:
  - host: golang.default.192.168.56.7.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-golang
            port: 
              number: 8080
